--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 0px 30px;
+        padding: 0px 10px;
     }
 
     .page1 .row2 .col1 {
@@ -134,12 +134,76 @@
     /* page 1 ends */
 
     /* page2 starts  */
-    .page2{
+    .page2 {
         width: 100%;
-        height: 100vh;
+        min-height: 100vh;
         background-color: #7b3535;
     }
+
+    .page2 .row1 {
+        width: 100%;
+        height: 30vh;
+        /* background-color: gray; */
+        display: flex;
+        justify-content: space-between;
+        padding: 16px 30px;
+        text-transform: uppercase;
+        color: #0a0a0a;
+    }
+
+    /* .page2 .row1 .col1 {
+        width: 30%;
+        height: 100%;
+        background-color: blue;
+    } */
+    .page2 .row1 .col1 h5 {
+        font-size: 1.2vw;
+
+    }
+
+    .page2 .row1 .col2 h1 {
+        font-size: 4.8vw;
+        line-height: 5vw;
+    }
+
+    .image-containerfor-row2 {
+        width: 30%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        display: block;
+        border-radius: 20px;
+        overflow: hidden;
+        /* background-color: #080808; */
+    }
+
+    .image-containerfor-row2 img {
+        width: 100%;
+        height: 100%;
+        display: block;
+
+    }
+
+    .page2 .row2 {
+        width: 100%;
+        height: 35vh;
+        display: flex;
+        padding-top: 30px;
+        /* align-items: center; */
+        justify-content: space-around;
+    }
+
+    .page2 .row3 {
+        width: 100%;
+        height: 35vh;
+        display: flex;
+        padding-top: 30px;
+        /* align-items: center; */
+        justify-content: space-around;
+    }
 }
+
+
 
 @media (max-width: 970px) {
 
@@ -150,6 +214,7 @@
         border-radius: 50%;
         overflow: hidden;
     }
+
     .page1 .row2 .col3 #menu {
         display: block !important;
     }
@@ -157,6 +222,7 @@
     .page1 .row2 .col2 a {
         display: none;
     }
+
     .page1 .row3 {
         height: 60%;
     }
@@ -164,12 +230,28 @@
     .page1 .both-buttons {
         --swiper-navigation-size: 30px;
     }
+
+    .page2 .row1 {
+        width: 100%;
+        height: 2vh;
+        display: inline-block;
+        padding: 20px 20px;
+        text-transform: uppercase;
+        color: #0a0a0a;
+    }
+
+    .page2 .row1 .col2 h1 {
+        margin-top: 20px;
+        position: relative;
+        /* left: 12vw; */
+    }
 }
 
 @media (max-width: 770px) {
-    .page1 .row2{
+    .page1 .row2 {
         height: 55px;
     }
+
     .page1 .row3 {
         height: 50%;
     }
@@ -177,12 +259,22 @@
     .page1 .both-buttons {
         --swiper-navigation-size: 25px;
     }
+
+    .page2 .row2 .col1 {
+        display: none;
+    }
+
+    .page2 .row3 .col3 {
+        display: none;
+    }
+
 }
 
 @media (max-width: 420px) {
-    .page1 .row2{
+    .page1 .row2 {
         height: 50px;
     }
+
     .page1 .row2 .col1 {
         width: 30px;
         height: auto;
@@ -190,6 +282,7 @@
         border-radius: 50%;
         overflow: hidden;
     }
+
     .page1 .row1 .part-small {
         display: block !important;
     }
@@ -204,5 +297,27 @@
 
     .page1 .both-buttons {
         --swiper-navigation-size: 15px;
+    }
+
+    .page2 .row2 {
+        width: 100%;
+        height: 35vh;
+        display: inline-block;
+
+    }
+
+    .page2 .row3 {
+        width: 100%;
+        height: 35vh;
+        display: inline-block;
+
+    }
+
+    .image-containerfor-row2 {
+        width: 80%;
+        height: 100%;
+        border-radius: 20px;
+        margin:  20px 32px;
+        background-color: #080808;
     }
 }
