--- a/style.css
+++ b/style.css
@@ -201,6 +201,81 @@
         /* align-items: center; */
         justify-content: space-around;
     }
+
+    .page3 {
+        width: 100%;
+        min-height: 100vh;
+        background-color: #d8c8c8;
+    }
+
+    .page3 .row1 {
+        width: 100%;
+        height: 10vh;
+        background-color: #7b3535;
+    }
+
+    .page3 .row2 {
+        width: 100%;
+        /* height: 35vh; */
+        /* background-color: #bea0a0; */
+        text-transform: uppercase;
+        padding: 77px 30px;
+    }
+
+    .page3 .row2 h1 {
+        font-size: 5vw;
+    }
+
+    .page3 .row2 h6 {
+        font-size: 1vw;
+        line-height: 1.6vw;
+    }
+
+    .page3 .row3 {
+        width: 100%;
+        min-height: 50px;
+        /* background-color: green; */
+        display: flex;
+        align-items: center;
+        color: #1b1b1bc0;
+        text-transform: capitalize;
+        padding: 0px 20px;
+    }
+
+    .page3 .row3 h6 {
+        margin: 0px 10px;
+        font-size: 3vw;
+    }
+
+    .page3 .row4 {
+        width: 100%;
+        min-height: 45vh;
+        /* background-color: green; */
+        /* padding: 30px 20px; */
+        /* overflow: hidden; */
+    }
+
+    /* swiper2  */
+
+
+    .swiper2 {
+        width: 100%;
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .swiper-slide2 {
+        background-position: center;
+        background-size: cover;
+        width: 300px;
+        height: 200px;
+        /* overflow: hidden; */
+    }
+
+    .swiper-slide2 img {
+        display: block;
+        width: 100%;
+    }
 }
 
 
@@ -244,6 +319,14 @@
         margin-top: 20px;
         position: relative;
         /* left: 12vw; */
+    }
+
+    .page3 .row2 {
+        width: 100%;
+        /* height: 35vh; */
+        background-color: #bea0a0;
+        text-transform: uppercase;
+        padding: 20px 20px;
     }
 }
 
@@ -317,7 +400,17 @@
         width: 80%;
         height: 100%;
         border-radius: 20px;
-        margin:  20px 32px;
+        margin: 20px 32px;
         background-color: #080808;
+    }
+
+    .page3 .row3 {
+        width: 100%;
+        min-height: 30px;
+        padding: 0px 10px;
+    }
+
+    .page3 .row3 h6 {
+        margin: 0px 5px;
     }
 }
