--- a/style.css
+++ b/style.css
@@ -109,8 +109,13 @@
         overflow: hidden; */
     }
 
+    .page1 .row3 img {
+        width: 100%;
+        height: 100%;
+    }
+
     /* swiper first */
-    .page1 .swiper {
+    /* .page1 .swiper {
         width: 100%;
         height: 100%;
     }
@@ -129,7 +134,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-    }
+    } */
 
     /* page 1 ends */
 
@@ -251,30 +256,51 @@
         width: 100%;
         min-height: 45vh;
         /* background-color: green; */
-        /* padding: 30px 20px; */
+        padding: 30px 20px;
         /* overflow: hidden; */
     }
 
     /* swiper2  */
 
+    /* html,
+    body {
+        position: relative;
+        height: 100%;
+    }
 
-    .swiper2 {
+    body {
+        background: #eee;
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        color: #000;
+        margin: 0;
+        padding: 0;
+    } */
+
+    .swiper {
         width: 100%;
         padding-top: 50px;
         padding-bottom: 50px;
     }
 
-    .swiper-slide2 {
+    .swiper-slide {
         background-position: center;
         background-size: cover;
-        width: 300px;
-        height: 200px;
-        /* overflow: hidden; */
+        width: 22% !important;
+        /* width: 22% ; */
+        height: 50px;
+        overflow: hidden;
+        flex-shrink: 2;
     }
 
-    .swiper-slide2 img {
+    .swiper-slide img {
         display: block;
         width: 100%;
+        height: 100%;
+    }
+
+    .myslide{
+        
     }
 }
 
