--- a/style.css
+++ b/style.css
@@ -351,10 +351,11 @@
         width: 100%;
         height: 36.1%;
         /* background-color: crimson; */
-        padding: 0% 18%;
+        /* padding: 0% 20%; */
+        margin: 40px 0px;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-around;
 
     }
 
@@ -469,19 +470,25 @@
 @media (max-width:1270px) {
     .page4 .row1 {
         display: flex;
-        gap: 30rem;
+        gap: 26rem;
         color: white;
         /* padding: 2.5% 4%;
         text-transform: uppercase; */
     }
 
     .page4 .row2 .col1 {
-        display: flex;
-        flex-direction: column;
+        /* display: flex;
+        flex-direction: column; */
         /* padding: 2.5% 4%;
         text-transform: uppercase; */
     }
 
+    .page4 .row2 .col1 .contain-image {
+        width: 70vh;
+        height: 35vh;
+        /* border-radius: 20px; */
+        /* overflow: hidden; */
+    }
 
 }
 
@@ -535,6 +542,37 @@
         text-transform: uppercase;
         padding: 20px 20px;
     }
+
+    .page4 .row1 {
+        display: flex;
+        flex-direction: column;
+        gap: 4rem;
+        color: white;
+    }
+
+    .page4 .row1 .col2 {
+        margin-left: 20rem;
+    }
+
+    .page4 .row2 .col1 {
+        /* display: flex;
+        flex-direction: column; */
+        /* padding: 2.5% 4%;
+        text-transform: uppercase; */
+    }
+
+    .page4 .row2 .col1 .contain-image {
+        width: 60vh;
+        height: 35vh;
+        /* border-radius: 20px; */
+        /* overflow: hidden; */
+    }
+
+    .page4 .row2 .col1 .image-details {
+        width: 48vh;
+        height: 35vh;
+
+    }
 }
 
 @media (max-width: 770px) {
@@ -556,6 +594,42 @@
 
     .page2 .row3 .col3 {
         display: none;
+    }
+
+    .page4 .row1 {
+
+        gap: 2rem;
+
+    }
+
+    .page4 .row1 h1 {
+        font-weight: 100;
+        font-size: 4vw;
+    }
+
+    .page4 .row1 .col2 {
+        margin-left: 12rem;
+    }
+
+    .page4 .row2 .col1 {
+        display: flex;
+        flex-direction: column;
+        gap: 1.5em;
+        /* padding: 2.5% 4%;
+        text-transform: uppercase; */
+    }
+
+    .page4 .row2 .col1 .contain-image {
+        width: 60vh;
+        height: 35vh;
+        /* border-radius: 20px; */
+        /* overflow: hidden; */
+    }
+
+    .page4 .row2 .col1 .image-details {
+        width: 48vh;
+        height: 35vh;
+
     }
 
 }
@@ -619,5 +693,41 @@
 
     .page3 .row3 h6 {
         margin: 0px 5px;
+    }
+
+    .page4 .row1 {
+
+        gap: 0rem;
+
+    }
+
+    .page4 .row1 h1 {
+        font-weight: 100;
+        font-size: 4vw;
+    }
+
+    .page4 .row1 .col2 {
+        margin-left: 8rem;
+    }
+
+    /* .page4 .row2 .col1 {
+        display: flex;
+        flex-direction: column;
+        gap: 1.5em;
+        /* padding: 2.5% 4%;
+        text-transform: uppercase; */
+
+    .page4 .row2 .col1 .contain-image {
+        width: 48vh;
+        height: 35vh;
+        /* border-radius: 20px; */
+        /* overflow: hidden; */
+    }
+
+    .page4 .row2 .col1 .image-details {
+        width: 48vh;
+        height: 35vh;
+        margin: 0px 0px;
+
     }
 }
