--- a/style.css
+++ b/style.css
@@ -494,7 +494,7 @@
     /* page6     */
     .page6 {
         width: 100%;
-        height: 100vh;
+        min-height: 110vh;
         /* background-color: #7a6464; */
     }
 
@@ -564,6 +564,13 @@
         margin-top: 10px;
         
     }
+
+    .page7{
+        width: 100%;
+        height: 100vh;
+        background-color: cadetblue;
+    }
+    
 
 
 }
