--- a/style.css
+++ b/style.css
@@ -668,10 +668,87 @@
     }
     .page8 .col2 .part2 .contain-details{
         
-        background-color: yellow;
+        background-color: rgb(244, 244, 135);
         height: 30vw;
         width: 28vw;
+        padding: 20px 20px;
+        border-radius: 20px;
 
+    }
+    .page8 .col2 .part2 .contain-details .part-1{
+        display: flex;
+        justify-content: space-between;
+        font-size: 1.5vw;
+        margin-bottom: 2rem;
+
+    }
+    .page8 .col2 .part2 .contain-details .part-1 #but-bac{
+        border: 1px solid black;
+        width: 6vw;
+        padding: 3px 11px;
+        border-radius: 40px;
+    }
+    .page8 .col2 .part2 .contain-details .part-2{
+        font-size: 2vw;
+        margin-bottom: 30px;
+    }
+    .page8 .col2 .part2 .contain-details .part-4{
+        margin-top: 1vw;
+        border: 2px solid black;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        padding: 10px 10px;
+    }
+    .page9{
+        width: 100%;
+        height: 90vh;
+        background-color: #d8c8c8;
+    }
+    .page9 .row1{
+        width: 100%;
+        height: 18vw;
+        /* background-color: blueviolet; */
+        padding: 60px 60px;
+    }
+    .page9 .row1 h1{
+        font-size: 3.5vw;
+        text-transform: capitalize;
+        margin-bottom: 2vw;
+    }
+    .page9 .row2{
+        width: 100%;
+        height: 23.7vw;
+        
+        padding: 5vw 2vw;
+    }
+    .page9 .row2 .myowl .myown{
+        width: 22vw;
+        height: 15vw;
+        background-color: rgb(78, 68, 86);
+        border-radius: 20px;
+        padding: 20px 30px;
+    }
+    .page9 .row2 .myowl .myown .row-1 h6{
+        width: 6vw;
+        height: 2vw;
+        border:  1px solid black;
+        font-size: 1vw;
+        padding: 5px 5px;
+        border-radius: 20px;
+    }
+    .page9 .row2 .myowl .myown .row-1 i{
+        width: 2vw;
+        height: 2vw;
+        border:  1px solid black;
+        font-size: 1vw;
+        padding: 8px 8px;
+        border-radius: 20px;
+    }
+    .page9 .row2 .myowl .myown .row-1{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 6vw;
     }
 }
 
