--- a/style.css
+++ b/style.css
@@ -750,6 +750,96 @@
         justify-content: space-between;
         margin-bottom: 6vw;
     }
+    footer{
+        width: 100%;
+        height: 60vh;
+        background-color: #080808;
+        color: white;
+        padding: 10px 10px;
+    }
+    footer .row1{
+        width: 100%;
+        height: 50vh ;
+        border-bottom: 1px solid white;
+        display: flex;
+        justify-content:space-between ;
+    }
+    footer .row1 .part1{
+        width: 80%;
+        /* background-color: yellow; */
+        display: flex;
+        justify-content: space-evenly;
+        padding: 50px 0px;
+    }
+    footer .row1 .part1 .col1 h2{
+        font-size: 1.5vw;
+        font-weight: 100;
+        text-transform: capitalize;
+        margin-bottom: 2.5vw;
+    }
+    footer .row1 .part1 .col1 h6{
+        font-size: 1vw;
+        font-weight: 100;
+        text-transform: capitalize;
+        margin-bottom: 2.5vw;
+    }
+    footer .row1 .part2{
+        /* background-color: green; */
+        width: 20vw;
+        padding: 50px 0px;
+    }
+    footer .row1 .part2 h5{
+        font-size: 1vw;
+        font-weight: 100;
+        text-transform: capitalize;
+        margin-bottom: 3vw;
+        border: 1px solid white;
+        width: 10vw;
+        height: 3vw;
+        padding: 0.8vw 2.2vw;
+        border-radius: 25px;
+    }
+    footer .row1 .part2 #appl{
+        padding: 0.8vw 2.7vw;
+    }
+    footer .row1 .part2 #career{
+        padding: 0.8vw 3.3vw;
+    }
+    footer .row2{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: 5px 0px;
+    }
+    footer .row2 .part1 .img-container{
+        width: 60px;
+        height: 60px;
+        background-color: wheat;
+        border-radius: 50%;
+        overflow: hidden;
+    }
+    footer .row2 .part1 .img-container img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+    footer .row2 .part2{
+       display: flex;
+       justify-content: space-between;
+       gap: 3vw;
+
+    }
+    footer .row2 .part2 h6{
+        font-size: 0.8vw;
+        text-transform: capitalize;
+        border-right: 2px solid white;
+        padding-right: 20px;
+        
+     }
+     footer .row2 .part2 #privacy{
+        border: none;
+     }
 }
 
 @media (max-width:1270px) {
