--- a/style.css
+++ b/style.css
@@ -548,85 +548,128 @@
 
     }
 
-    .page6 .row2 .owl-carousel .item .textdiv{
+    .page6 .row2 .owl-carousel .item .textdiv {
         margin-top: 20px;
         padding: 0px 10px;
         text-transform: capitalize;
     }
-    .page6 .row2 .owl-carousel .item .textdiv span{
+
+    .page6 .row2 .owl-carousel .item .textdiv span {
         font-size: 2rem;
         font-weight: 700;
-        
+
     }
-    .page6 .row2 .owl-carousel .item .textdiv p{
+
+    .page6 .row2 .owl-carousel .item .textdiv p {
         font-size: 1rem;
         font-weight: 300;
         margin-top: 10px;
-        
+
     }
 
-    .page7{
+    .page7 {
         width: 100%;
         height: 100vh;
         background-color: cadetblue;
         color: #fdfafa;
     }
-    
-    .page7 .onlycolor{
+
+    .page7 .onlycolor {
         height: 8vh;
         width: 100%;
         background-color: white;
     }
-    .page7 .middlerow{
+
+    .page7 .middlerow {
         height: 84vh;
         width: 100%;
         background-color: #080808;
-        display: flex;
+        /* display: flex; */
+
     }
 
-    .page7 .middlerow .col1{
+    .page7 .middlerow .col1 {
         /* background-color: #431717; */
-        width: 40%;
-        height: 84vh;
-        padding: 12vw 5vw;
+        width: 100%;
+        height: 16vw;
+        padding-top: 5vw;
+        padding-left: 15vw;
+        
 
     }
 
-    .page7 .middlerow .col1 .writeen h6{
+    .page7 .middlerow .col1 .writeen h6 {
         font-size: 3vw;
         font-weight: 200;
         color: red;
         text-transform: uppercase;
     }
-    .page7 .middlerow .col1 .writeen h2{
+
+    .page7 .middlerow .col1 .writeen h2 {
         font-size: 5vw;
         text-transform: capitalize;
         margin-top: 3px;
     }
-    .page7 .middlerow .col1 .writeen h3{
+
+    .page7 .middlerow .col1 .writeen h3 {
         font-size: 4vw;
         text-transform: capitalize;
         margin-top: 4px;
         margin-left: 85px;
     }
-    .page7 .middlerow .col2{
-        background-color: #431717;
-        width: 60%;
-        height: 84vh;
+
+    .page7 .middlerow .col2 {
+        width: 100%;
+        height: 100%;
+        margin-top: 5vw;
+        margin-left: 3vw;
+    }
+
+    .page7 .middlerow .col2 .part1 {
+        width: 90%;
+        height: 20vw;
+        margin-top: 0.1vw;
+        margin-left: 2vw;
+        overflow-x: hidden;
+    }
+
+    .page7 .middlerow .col2 .part1 .mycrou .myui {
+
+        width: 22vw;
+        height: 15vw;
+        background-color: rgb(246, 244, 248);
+        border-radius: 20px;
+        padding: 20px 30px;
+        color: #080808;
+    }
+    .page7 .middlerow .col2 .part1 .mycrou .myui .myyrow1{
+        width: 100%;
+        height: 4vw;
+        /* background-color: blue; */
+        margin-bottom: 3vw;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
+        padding: 2px 10px;
     }
-    .page7 .middlerow .col2 .part1{
-        width: 18.5rem;
-        height: 3rem;
-        background-color: green;
+    .page7 .middlerow .col2 .part1 .mycrou .myui .myyrow1 .part-1{
+        width: 3.6vw;
+        height: 3.6vw;
+        border-radius: 50%;
+        border: 2px solid rgb(61, 58, 58);
+        overflow: hidden;
+        background-color: wheat;
     }
-    .page7 .middlerow .col2 .part3{
-        width: 8rem;
-        height: 5rem;
-        background-color: rgb(17, 33, 17);
+    .page7 .middlerow .col2 .part1 .mycrou .myui .myyrow1 .part-1 img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
     }
-    .page8{
+    .page7 .middlerow .col2 .part1 .mycrou .myui .myyrow1 .part2 h5{
+        margin-top: 10px;
+    }
+
+    .page8 {
         width: 100%;
         min-height: 100vh;
         background-color: cornsilk;
@@ -634,40 +677,46 @@
         color: #080808;
         padding: 10px 10px;
     }
-    
-    .page8 .col1{
+
+    .page8 .col1 {
         padding: 5vw 5vw;
         width: 40%;
         height: 100%;
     }
-    .page8 .col1 .part1{
+
+    .page8 .col1 .part1 {
         text-transform: uppercase;
         font-size: 1.8vw;
         margin-bottom: 10rem;
     }
-    .page8 .col1 .part2 h6{
+
+    .page8 .col1 .part2 h6 {
         text-transform: capitalize;
         font-size: 2vw;
         margin-top: 20px;
 
     }
-    .page8 .col2{
+
+    .page8 .col2 {
         padding-top: 3vw;
         padding-left: 5vw;
         width: 100%;
     }
-    .page8 .col2 .part1{
+
+    .page8 .col2 .part1 {
         text-transform: uppercase;
         font-size: 2vw;
 
     }
-    .page8 .col2 .part2{
+
+    .page8 .col2 .part2 {
         display: flex;
         justify-content: space-around;
         margin-top: 50px;
     }
-    .page8 .col2 .part2 .contain-details{
-        
+
+    .page8 .col2 .part2 .contain-details {
+
         background-color: rgb(244, 244, 135);
         height: 30vw;
         width: 28vw;
@@ -675,24 +724,28 @@
         border-radius: 20px;
 
     }
-    .page8 .col2 .part2 .contain-details .part-1{
+
+    .page8 .col2 .part2 .contain-details .part-1 {
         display: flex;
         justify-content: space-between;
         font-size: 1.5vw;
         margin-bottom: 2rem;
 
     }
-    .page8 .col2 .part2 .contain-details .part-1 #but-bac{
+
+    .page8 .col2 .part2 .contain-details .part-1 #but-bac {
         border: 1px solid black;
         width: 6vw;
         padding: 3px 11px;
         border-radius: 40px;
     }
-    .page8 .col2 .part2 .contain-details .part-2{
+
+    .page8 .col2 .part2 .contain-details .part-2 {
         font-size: 2vw;
         margin-bottom: 30px;
     }
-    .page8 .col2 .part2 .contain-details .part-4{
+
+    .page8 .col2 .part2 .contain-details .part-4 {
         margin-top: 1vw;
         border: 2px solid black;
         border-radius: 50%;
@@ -700,95 +753,110 @@
         height: 40px;
         padding: 10px 10px;
     }
-    .page9{
+
+    .page9 {
         width: 100%;
         height: 90vh;
         background-color: #d8c8c8;
     }
-    .page9 .row1{
+
+    .page9 .row1 {
         width: 100%;
         height: 18vw;
         /* background-color: blueviolet; */
         padding: 60px 60px;
     }
-    .page9 .row1 h1{
+
+    .page9 .row1 h1 {
         font-size: 3.5vw;
         text-transform: capitalize;
         margin-bottom: 2vw;
     }
-    .page9 .row2{
+
+    .page9 .row2 {
         width: 100%;
         height: 23.7vw;
-        
+
         padding: 5vw 2vw;
     }
-    .page9 .row2 .myowl .myown{
+
+    .page9 .row2 .myowl .myown {
         width: 22vw;
         height: 15vw;
         background-color: rgb(78, 68, 86);
         border-radius: 20px;
         padding: 20px 30px;
     }
-    .page9 .row2 .myowl .myown .row-1 h6{
+
+    .page9 .row2 .myowl .myown .row-1 h6 {
         width: 6vw;
         height: 2vw;
-        border:  1px solid black;
+        border: 1px solid black;
         font-size: 1vw;
         padding: 5px 5px;
         border-radius: 20px;
     }
-    .page9 .row2 .myowl .myown .row-1 i{
+
+    .page9 .row2 .myowl .myown .row-1 i {
         width: 2vw;
         height: 2vw;
-        border:  1px solid black;
+        border: 1px solid black;
         font-size: 1vw;
         padding: 8px 8px;
         border-radius: 20px;
     }
-    .page9 .row2 .myowl .myown .row-1{
+
+    .page9 .row2 .myowl .myown .row-1 {
         display: flex;
         justify-content: space-between;
         margin-bottom: 6vw;
     }
-    footer{
+
+    footer {
         width: 100%;
         height: 60vh;
         background-color: #080808;
         color: white;
         padding: 10px 10px;
     }
-    footer .row1{
+
+    footer .row1 {
         width: 100%;
-        height: 50vh ;
+        height: 50vh;
         border-bottom: 1px solid white;
         display: flex;
-        justify-content:space-between ;
+        justify-content: space-between;
     }
-    footer .row1 .part1{
+
+    footer .row1 .part1 {
         width: 80%;
         /* background-color: yellow; */
         display: flex;
         justify-content: space-evenly;
         padding: 50px 0px;
     }
-    footer .row1 .part1 .col1 h2{
+
+    footer .row1 .part1 .col1 h2 {
         font-size: 1.5vw;
         font-weight: 100;
         text-transform: capitalize;
         margin-bottom: 2.5vw;
     }
-    footer .row1 .part1 .col1 h6{
+
+    footer .row1 .part1 .col1 h6 {
         font-size: 1vw;
         font-weight: 100;
         text-transform: capitalize;
         margin-bottom: 2.5vw;
     }
-    footer .row1 .part2{
+
+    footer .row1 .part2 {
         /* background-color: green; */
         width: 20vw;
         padding: 50px 0px;
     }
-    footer .row1 .part2 h5{
+
+    footer .row1 .part2 h5 {
         font-size: 1vw;
         font-weight: 100;
         text-transform: capitalize;
@@ -799,47 +867,55 @@
         padding: 0.8vw 2.2vw;
         border-radius: 25px;
     }
-    footer .row1 .part2 #appl{
+
+    footer .row1 .part2 #appl {
         padding: 0.8vw 2.7vw;
     }
-    footer .row1 .part2 #career{
+
+    footer .row1 .part2 #career {
         padding: 0.8vw 3.3vw;
     }
-    footer .row2{
+
+    footer .row2 {
         display: flex;
         justify-content: space-around;
         align-items: center;
         padding: 5px 0px;
     }
-    footer .row2 .part1 .img-container{
+
+    footer .row2 .part1 .img-container {
         width: 60px;
         height: 60px;
         background-color: wheat;
         border-radius: 50%;
         overflow: hidden;
     }
-    footer .row2 .part1 .img-container img{
+
+    footer .row2 .part1 .img-container img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         object-position: center;
     }
-    footer .row2 .part2{
-       display: flex;
-       justify-content: space-between;
-       gap: 3vw;
+
+    footer .row2 .part2 {
+        display: flex;
+        justify-content: space-between;
+        gap: 3vw;
 
     }
-    footer .row2 .part2 h6{
+
+    footer .row2 .part2 h6 {
         font-size: 0.8vw;
         text-transform: capitalize;
         border-right: 2px solid white;
         padding-right: 20px;
-        
-     }
-     footer .row2 .part2 #privacy{
+
+    }
+
+    footer .row2 .part2 #privacy {
         border: none;
-     }
+    }
 }
 
 @media (max-width:1270px) {
@@ -964,7 +1040,8 @@
         position: relative;
         /* left: 12vw; */
     }
-    .page3{
+
+    .page3 {
         min-height: auto;
     }
 
