--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@
         padding-bottom: 50px;
         padding-left: 0px;
     }
+
     .swiper-wrapper {
         width: 2vw !important;
     }
@@ -600,7 +601,7 @@
         height: 22vw;
         padding-top: 5vw;
         padding-left: 15vw;
-        
+
 
     }
 
@@ -647,7 +648,8 @@
         padding: 20px 30px;
         color: #080808;
     }
-    .page7 .middlerow .col2 .part1 .mycrou .myui .myyrow1{
+
+    .page7 .middlerow .col2 .part1 .mycrou .myui .myyrow1 {
         width: 100%;
         height: 4vw;
         /* background-color: blue; */
@@ -656,7 +658,8 @@
         justify-content: space-around;
         padding: 2px 10px;
     }
-    .page7 .middlerow .col2 .part1 .mycrou .myui .myyrow1 .part-1{
+
+    .page7 .middlerow .col2 .part1 .mycrou .myui .myyrow1 .part-1 {
         width: 3.6vw;
         height: 3.6vw;
         border-radius: 50%;
@@ -664,13 +667,15 @@
         overflow: hidden;
         background-color: wheat;
     }
-    .page7 .middlerow .col2 .part1 .mycrou .myui .myyrow1 .part-1 img{
+
+    .page7 .middlerow .col2 .part1 .mycrou .myui .myyrow1 .part-1 img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         object-position: center;
     }
-    .page7 .middlerow .col2 .part1 .mycrou .myui .myyrow1 .part2 h5{
+
+    .page7 .middlerow .col2 .part1 .mycrou .myui .myyrow1 .part2 h5 {
         margin-top: 10px;
     }
 
@@ -927,7 +932,7 @@
     .page4 .row2 .col1 .contain-image {
         width: 42vw;
         height: 35vh;
-       
+
     }
 }
 
@@ -1040,9 +1045,11 @@
         padding-top: 5vw;
         padding-left: 15vw;
     }
+
     .page7 .middlerow .col2 {
         margin-top: 13vw;
     }
+
     .page7 .middlerow .col2 .part1 .mycrou .myui {
         width: 24vw;
         height: 23vw;
@@ -1050,7 +1057,8 @@
         border-radius: 20px;
         padding: 20px 30px;
         color: #080808;
-    }   
+    }
+
     .page7 .middlerow .col2 .part1 {
         height: 24vw;
     }
@@ -1307,15 +1315,19 @@
         padding-top: 5vw;
         padding-left: 15vw;
     }
+
     .page7 .middlerow .col2 {
         margin-top: 13vw;
     }
+
     .page7 .middlerow .col2 .part1 .mycrou .myui {
         width: 40vw;
-        }   
+    }
+
     .page7 .middlerow .col2 .part1 {
         height: 24vw;
     }
+
     .page7 .middlerow .col2 .part1 .mycrou .myui .myyrow1 {
         margin-bottom: 5vw;
     }
@@ -1428,6 +1440,7 @@
         border-bottom: 1px solid black;
         border-right: none;
     }
+
     .page6 {
         width: 100%;
         min-height: 96vh;
@@ -1441,6 +1454,15 @@
     .page6 .row1 .part2 {
         align-items: flex-start;
         margin-left: 150px;
+    }
+    .page7{
+        height: 65vh;
+    }
+    .page7 .middlerow .col2 .part1 .mycrou .myui {
+        width: 86vw;
+    }
+    .page7 .middlerow .col2 .part1 {
+        height: 48vw;
     }
 
 }
@@ -1471,10 +1493,12 @@
     .page5div2 .part2 h6 {
         font-size: 5px;
     }
+
     .page6 {
         width: 100%;
         min-height: 90vh;
     }
+
     .page6 .row1 {
         width: 100%;
         height: 20vh;
